# CountryInfoAgent

./: .gitignore  ARCHITECTURE.md  README.md
backend/: .env.example  config.json  llm_factory.py  main.py  models.py  nodes.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: graph.py  index.py  main.py
frontend/: package-lock.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Header.tsx  ThoughtProcess.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
